methods.flowerpot.FlowerCase.scala.error
Erreur de compilation :
FlowerCase:1: error: ':' expected but '(' found.
override def run(            growFlowers()
                                        ^FlowerCase:148: error: identifier expected but '}' found.
}
^